# recipe-web

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  docker-compose.yml
.agent/: rules.md
.agent/workflows/: safe-push.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-tasks.md
.gemini/: BRANCHING_AND_CI.md  EXAMPLE_FLOW.md  QUICK_REFERENCE.md  README.md  constitution.md
.gemini/scripts/bash/: create-new-feature.sh  setup-plan.sh
.gemini/templates/: plan-template.md  tasks-template.md
.github/workflows/: ci.yml  frontend-e2e.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .flake8  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3e125208b901_add_account_security.py  7b42b42115dd_add_is_public_to_recipes.py  8613537b803a_add_security_notifications_field.py  c04680be28c9_add_full_name.py  cbb4e747c986_initial_migration.py  d03ef81d7de7_add_auth_fields.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  extract.py  recipes.py  security.py
backend/app/core/: config.py  database.py  exceptions.py  logger.py  security.py
backend/app/crud/: user.py
backend/app/models/: db.py  recipe.py  security.py  user.py
backend/app/schemas/: auth.py  recipe.py  security.py  user.py
backend/app/services/: ai_extractor.py  auth_service.py  cache.py  discovery.py  email_service.py  gemini.py  geoip.py  oauth.py  security_service.py  youtube.py
backend/tests/: test_main.py
backend/tests/contract/: test_cookbook.py  test_extract_api.py
backend/tests/regression/: conftest.py  test_quality.py
backend/tests/regression/data/: golden_samples.json
backend/tests/unit/api/: test_deps.py
backend/tests/unit/api/endpoints/: test_recipes.py  test_security_endpoints.py
backend/tests/unit/core/: test_security.py
backend/tests/unit/crud/: test_user.py
backend/tests/unit/services/: test_auth_service.py  test_cache.py  test_discovery.py  test_email_service.py  test_gemini.py  test_geoip.py  test_security_service.py  test_youtube.py
docs/: README.md
docs/architecture/: auth_flow.md
docs/processes/: spec_workflow.md
docs/setup/: env_vars.md
docs/testing/: README.md  backend.md  e2e.md  frontend.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/__tests__/components/auth/: LoginForm.test.tsx  RegisterForm.test.tsx
frontend/src/__tests__/components/security/: SessionCard.test.tsx
frontend/src/__tests__/components/shared/: DeleteConfirmation.test.tsx  Navbar.test.tsx  RecipeCard.test.tsx
frontend/src/__tests__/components/ui/: FeatureCard.test.tsx  Modal.test.tsx  SearchBar.test.tsx
frontend/src/__tests__/lib/: api.test.ts  auth.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/cookbook/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/login/2fa/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx  page.tsx.bak
frontend/src/app/settings/: page.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx  SocialLoginButton.tsx
frontend/src/components/security/: SessionCard.tsx  TwoFactorSetup.tsx
frontend/src/components/shared/: BackgroundLayout.tsx  delete-confirmation.tsx  navbar.tsx  recipe-card.tsx
frontend/src/components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/ui/: GlassCard.tsx  InfiniteMarquee.tsx  Modal.tsx  ModernInput.tsx  NeonButton.tsx  PillButton.tsx  button.tsx  feature-card.tsx  input.tsx  search-bar.tsx  step-card.tsx
frontend/src/lib/: api.ts  auth.ts  theme-utils.ts  types.ts
frontend/src/test-utils/: mocks.ts  render.tsx  setup.ts
frontend/tests/: auth.spec.ts  cookbook.spec.ts  explore.spec.ts  profile.spec.ts  recipe-extraction.spec.ts
scripts/: verify_live.py
specs/001-gemini-extractor/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-gemini-extractor/contracts/: api-spec.json
specs/002-authentication/: plan.md  spec.md  tasks.md
specs/003-cookbook/: plan.md  spec.md  tasks.md
specs/005-redesign/: spec.md
specs/006-futuristic-ui/: plan.md  spec.md  tasks.md
specs/007-enhanced-futuristic-ui/: plan.md  spec.md  tasks.md
specs/008-search-and-discovery/: plan.md  spec.md  tasks.md
specs/009-flow-fixes-and-optimization/: plan.md  spec.md  tasks.md
specs/010-account-security/: plan.md  spec.md  tasks.md
specs/011-testing-infrastructure-upgrade/: plan.md  spec.md  tasks.md  walkthrough.md
specs/012-fresh-design-and/: plan.md  spec.md  tasks.md
(+3 files in other folders)
