[tool.poetry]
name = "chefstream-backend"
version = "0.1.0"
description = "AI-powered recipe extractor backend"
authors = ["ChefStream Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
python-multipart = "^0.0.9"
youtube-transcript-api = "^0.6.2"
yt-dlp = "^2024.03.10"
google-generativeai = ">=0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "tests.py test_*.py *_tests.py"
