[tool.poetry]
name = "chefstream-backend"
version = "0.1.0"
description = "AI-powered recipe extractor backend"
authors = ["ChefStream Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.5.0"
alembic = "^1.14.0"
httpx = "^0.27.0"
python-multipart = "^0.0.12"
youtube-transcript-api = "^0.6.2"
yt-dlp = "^2025.2.22"
google-genai = "^1.0.0"
webvtt-py = "^0.4.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "tests.py test_*.py *_tests.py"
